Fix nav detect crashing when frame is null.
Fix TruckStats destination.